bulk buildout, tagging logic

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 <body>
   <header class='col12 pad2 cf'>
   <div class='col3'>
-    <a href='{{site.baseurl}}' class='logo pad2h'><img src='{{site.baseurl}}img/logo-clear.png'></a>
+    <a href='{{site.baseurl}}' class='logo pad2h'></a>
   </div>
   <nav class='col9'>
     <a href='#' class='transition about'>Who</a>
@@ -23,8 +23,6 @@
     <a href='#' class='transition vimeo'>V</a>
     <span class='divider'>&#9679;</span>
     <a href='#' class='transition artillery'>A<span>rtillery</span></a>
-    <!-- <span class='divider'>&#9679;</span> -->
-    <!-- <a href='#' class='box-clear'>What's happening</a> -->
   </nav>
 </header>
 <section class='col12 pad4 cf'>
